# graph_nomemory

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  research.md
.github/workflows/: container.yml
app/: analyze.cpp  cli_common.cpp  cli_common.hpp  inspect_tasks.cpp  prepare.cpp  sha256.cpp  sha256.hpp
config/: main.conf
docs/: algorithm.md  configuration.md
include/tbank/io/: edge_csv.hpp  rank_csv.hpp
include/tbank/pagerank/: analyze.hpp  config.hpp  pagerank.hpp
include/tbank/parallel/: fixed_executor.hpp
include/tbank/platform/: checked_io.hpp  publication.hpp
include/tbank/preprocess/: compact_edge_merge.hpp  compact_edge_runs.hpp  counted_graph.hpp  ingest.hpp  prepare.hpp  run_file.hpp  vertex_id_merge.hpp
include/tbank/resources/: page_rank.hpp
include/tbank/run/: cli.hpp  config.hpp
include/tbank/storage/: binary.hpp  file_reader.hpp  graph.hpp  manifest.hpp
include/tbank/tasks/: partitioner.hpp  task.hpp
src/: main.cpp
src/io/: edge_csv.cpp  rank_csv.cpp
src/pagerank/: analyze.cpp  config.cpp  engine.hpp  numerics.cpp  numerics.hpp  pagerank.cpp  parallel_traversal.cpp  timing.hpp
src/parallel/: fixed_executor.cpp  fixed_executor_clock.hpp
src/platform/: checked_io.cpp  publication.cpp
src/preprocess/: compact_edge_merge.cpp  compact_edge_runs.cpp  counted_graph.cpp  ingest.cpp  prepare.cpp  run_file.cpp  vertex_id_merge.cpp
src/resources/: page_rank.cpp
src/run/: cli.cpp  config.cpp
src/storage/: binary.cpp  file_reader.cpp  graph.cpp  manifest.cpp
src/tasks/: partitioner.cpp
tests/: contract_smoke.sh
tools/generators/: README.md  generate.py
